side/bottom-bar: Fix z-index

--- a/src/components/Navbar/Bottombar.css
+++ b/src/components/Navbar/Bottombar.css
@@ -10,6 +10,7 @@
   position: fixed;
   bottom: 0;
   left: 0;
+  z-index: 99;
 }
 .bottombarHomeIcon {
   width: 40px;
